Fix beaker spacing

--- a/front_end/assets/css/_beaker_notebooks.styl
+++ b/front_end/assets/css/_beaker_notebooks.styl
@@ -8,9 +8,6 @@
       position relative
       top 150px
 
-@css {
-  .beaker {
-    width: calc(100% - 560px);
-    max-width: 1000px;
-  }
-}
+.beaker-sandbox
+  .notebook-container
+    padding 0
